<resources>
    <string name="app_name">MadarSoftTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_data">Please enter the following data</string>
    <string name="user_name">User name</string>
    <string name="age">Age</string>
    <string name="job_title">Job title</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="enter_data">Enter Data</string>
    <string name="user_name_show"><![CDATA[<font color=\'#290087\'>User name: </font> %1$s]]></string>
    <string name="age_show"><![CDATA[<font color=\'#290087\'>Age: </font> %1$s]]></string>
    <string name="job_title_show"><![CDATA[<font color=\'#290087\'>Job title: </font> %1$s]]></string>
    <string name="gender_show"><![CDATA[<font color=\'#290087\'>Male: </font> %1$s]]></string>
</resources>